objects/APTS_LP_Local_Customer_Reference_Data__c.object
<CustomObject>
    <description>Object to hold the reference data related to customer (account). (ABB-LP)</description>
    <fields>
        <fullName>APTS_3rd_Party_Account_Number__c</fullName>
        <description>Field Name in ERP Data Loader Object - 3rd Party Account Number</description>
        <label>3rd Party Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Block_Code__c</fullName>
        <description>Block code to check if the MSPA creation is allowed for this account</description>
        <label>Block Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <description>Field to capture country for the LSO data.</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>ES</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Custom_Allocation_Desc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Description of Custom Allocation from Master PickList</description>
        <label>Custom Allocation</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Local Operational Data (Custom Allocation Desc)</relationshipLabel>
        <relationshipName>APTS_LocalOperationalDataCustomerAllocat</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_CustomerAcctNumber__c</fullName>
        <label>Customer Freight Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_CustomerAllocation__c</fullName>
        <label>Customer Allocation Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Delivery_Priority__c</fullName>
        <description>Field Name in ERP Data Loader Object - Delivery Priority</description>
        <label>Delivery Priority</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_ERP_ID__c</fullName>
        <label>ERP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_External_ID__c</fullName>
        <description>External Id to match the unique set. Value of this field will be SAP ID + Sales organisation + Distribution Channel.</description>
        <externalId>true</externalId>
        <label>APTS External ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_FreightMethod__c</fullName>
        <label>Freight Method</label>
        <picklist>
            <picklistValues>
                <fullName>Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_FreightTerms__c</fullName>
        <label>Freight Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Prepaid and Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party Acct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Incoterm2__c</fullName>
        <description>To be Used by PP Division</description>
        <label>Incoterm2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_IndustryUsage__c</fullName>
        <description>Picklist are from Opportunity Industry Usage Field. To be Used by PP Division</description>
        <label>Industry Usage</label>
        <picklist>
            <picklistValues>
                <fullName>BLD.10.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IND.1.1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_InsideSalesSupport__c</fullName>
        <description>To be Used by PP Division</description>
        <label>Inside Sales Support</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Account_GUID__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ APTS_LP_Account__r.Id , APTS_LP_Account__r.GUID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Local Operational Data</relationshipLabel>
        <relationshipName>Local_Customer_Reference_Data</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>BT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Incoterms__c</fullName>
        <label>Incoterms</label>
        <picklist>
            <picklistValues>
                <fullName>CFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZFE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Local_Channel__c</fullName>
        <label>Local Channel Code</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy-Promozione</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_LP_SAP_Customer_ID__c</fullName>
        <description>Placeholder field to hold the value of customer ID fetched from SAP.</description>
        <label>SAP Customer ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Sales_Organisation__c</fullName>
        <label>Sales Organisation</label>
        <picklist>
            <picklistValues>
                <fullName>ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_LocalMainBusiness__c</fullName>
        <label>Local Main Business Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LocalSegmentation__c</fullName>
        <label>Local Segmentation Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Channel_Desc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Description of Local Channel from Master PickList</description>
        <label>Local Channel</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Local Operational Data (Local Channel Desc)</relationshipLabel>
        <relationshipName>APTS_LocalOperationalDataLocalChannel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Main_Bussiness_Desc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Description of Local Main Business from Master PickList</description>
        <label>Local Main Business</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Local Operational Data (Local Main Bussiness Desc)</relationshipLabel>
        <relationshipName>APTS_LocalOperationalDataLocalBusiness</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Segmentation_Desc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Description of Local Segmentation from Master PickList</description>
        <label>Local Segmentation</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Local Operational Data (Local Segmentation Desc)</relationshipLabel>
        <relationshipName>APTS_LocalOperationalDataLocalSegment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_ModeofPayment__c</fullName>
        <description>Mode of Payment. Value is coming from SAP – from the Local reference data. To be Used by PP Division</description>
        <label>Mode of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Cash in Time (CIT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Card (CC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_Terms__c</fullName>
        <description>Field to capture payment terms associated with Apttus LSO object record.</description>
        <label>Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Record_Key__c</fullName>
        <formula>TEXT(APTS_LP_Sales_Organisation__c) +  TEXT(APTS_SAP_Division__c) +  TEXT(APTS_LP_Distribution_Channel__c)</formula>
        <label>Record Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Division__c</fullName>
        <description>Field to capture SAP Division.</description>
        <label>SAP Division</label>
        <picklist>
            <picklistValues>
                <fullName>ZZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>35</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_SalesCurrency__c</fullName>
        <description>To be Used by PP Division</description>
        <label>Sales Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_SalesDistrict__c</fullName>
        <label>Sales District Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SalesManager__c</fullName>
        <description>To be Used by PP Division</description>
        <label>Sales Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SalesOffice__c</fullName>
        <label>Sales Office Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SalesPerson__c</fullName>
        <description>To be Used by PP Division</description>
        <label>Sales Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SalesResourceTypes__c</fullName>
        <label>Type of Sales Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_District_Desc__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Description of Sales District from Master PickList</description>
        <label>Sales District</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Local Operational Data (Sales District Desc)</relationshipLabel>
        <relationshipName>APTS_LocalOperationalDataSalesDistrict</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Office</label>
        <referenceTo>APTS_Master_Picklist_Table__c</referenceTo>
        <relationshipLabel>Local Operational Data</relationshipLabel>
        <relationshipName>APTS_LocalOperationalDataSalesOffice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Shipping_Conditions__c</fullName>
        <description>Field Name in ERP Data Loader Object - Shipping Conditions</description>
        <label>Shipping Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Shipping_Instructions__c</fullName>
        <description>Field Name in ERP Data Loader Object - Shipping Instructions</description>
        <label>Shipping Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Local Operational Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>APTS_LP_Account__c</columns>
        <columns>APTS_LP_Account_GUID__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>APTS_LP_Distribution_Channel__c</columns>
        <columns>APTS_External_ID__c</columns>
        <columns>APTS_LP_Incoterms__c</columns>
        <columns>APTS_LP_Local_Channel__c</columns>
        <columns>APTS_Payment_Terms__c</columns>
        <columns>APTS_LP_Sales_Organisation__c</columns>
        <columns>APTS_LP_SAP_Customer_ID__c</columns>
        <columns>APTS_SAP_Division__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Block_Code__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>APTS_LP_Account_GUID__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>APTS_LP_Sales_Organisation__c</columns>
        <columns>APTS_LP_Distribution_Channel__c</columns>
        <columns>APTS_ERP_ID__c</columns>
        <columns>APTS_SAP_Division__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LCRD-{00000}</displayFormat>
        <label>Local Operational Data Num</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Local Operational Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>